Utils tests created